--- a/app/views/dashboards/performance/_partials/pipeline_summary.html
+++ b/app/views/dashboards/performance/_partials/pipeline_summary.html
@@ -55,11 +55,11 @@
 
                 <!-- start open -->
                 <div ng-repeat="status in performances.statuses" class="col-xs-6 col-sm-3 b-r b-b" title="{{status.name}} Service Requests">
-                    <div class="padding">
+                    <div class="p-a-sm">
                         <div class="text-center">
-                            <h2 class="text-center _600 m-t-md">
+                            <h4 class="text-center _600 m-t-md">
                                 {{status.count}}
-                            </h2>
+                            </h4>
                             <p class="text-muted m-b-md">
                                 {{status.name}}
                             </p>
