fix a typo on overview report

--- a/app/views/dashboards/overviews/_partials/overall_summary.html
+++ b/app/views/dashboards/overviews/_partials/overall_summary.html
@@ -76,7 +76,7 @@
                     <span class="text-muted text-xs">secs</span>
                     </span>
                 </h2>
-                <p class="text-muted m-b-md">Avarage Attend Time</p>
+                <p class="text-muted m-b-md">Average Attend Time</p>
             </div>
         </div>
     </div>
@@ -96,7 +96,7 @@
                     <span class="text-muted text-xs">mins</span>
                     </span>
                 </h2>
-                <p class="text-muted m-b-md">Avarage Resolve Time</p>
+                <p class="text-muted m-b-md">Average Resolve Time</p>
             </div>
         </div>
     </div>
