set scrollWheelZoom to false to prevent map to zoom on scroll

--- a/app/views/servicerequests/_partials/detail.html
+++ b/app/views/servicerequests/_partials/detail.html
@@ -157,7 +157,7 @@
         <!-- start issue map -->
         <div class="padding b-t" ng-show="servicerequest.longitude && servicerequest.latitude">
           <h6 class="m-b" title="Issue Map">Map</h6>
-          <leaflet id="servicerequest-map" center="map.center" markers="map.markers" bounds="map.bounds" height="280px" width="100%"></leaflet>
+          <leaflet id="servicerequest-map" center="map.center" markers="map.markers" bounds="map.bounds" defaults="map.defaults" height="280px" width="100%"></leaflet>
           <p>&nbsp;</p>
         </div>
         <!-- end issue map -->
