--- a/app/views/servicerequests/_partials/create.html
+++ b/app/views/servicerequests/_partials/create.html
@@ -27,26 +27,26 @@
                             <div class="box-body">
                                 <div class="row m-b">
                                     <div class="col-sm-6">
-                                        <div class="form-group form-material floating">
-                                            <input ng-model="servicerequest.reporter.phone" ng-required ng-minlength="2" focus-if="!servicerequest.reporter.phone" type="text" name="phone" class="form-control" />
+                                        <div class="form-group">
                                             <label class="floating-label">Phone</label>
+                                            <input ng-model="servicerequest.reporter.phone" ng-required ng-minlength="2" focus-if="!servicerequest.reporter.phone" type="text" name="phone" class="form-control" />
                                         </div>
                                     </div>
                                     <div class="col-sm-6">
-                                        <div class="form-group form-material floating">
-                                            <input ng-model="servicerequest.reporter.name" ng-required ng-minlength="2" type="text" name="name" class="form-control" />
+                                        <div class="form-group">
                                             <label class="floating-label">Name</label>
+                                            <input ng-model="servicerequest.reporter.name" ng-required ng-minlength="2" type="text" name="name" class="form-control" />
                                         </div>
                                     </div>
                                 </div>
                                 <div class="row m-b">
                                     <div class="col-sm-6">
-                                        <div class="form-group form-material floating">
+                                        <label class="floating-label">Account</label>
+                                        <div class="form-group">
                                             <div class="input-group">
                                                 <input ng-model="servicerequest.reporter.account" type="text" name="account" class="form-control" />
-                                                <label class="floating-label">Account</label>
-                                                <span class="input-group-btn p-l-sm">
-                                                    <button class="btn btn-sm btn-secondary" type="button">
+                                                <span class="input-group-btn">
+                                                    <button class="btn btn-secondary" type="button">
                                                         <i class="icon-magnifier"></i>
                                                     </button>
                                                   </span>
@@ -54,9 +54,9 @@
                                         </div>
                                     </div>
                                     <div class="col-sm-6">
-                                        <div class="form-group form-material floating">
-                                            <input ng-model="servicerequest.reporter.email" type="email" name="email" class="form-control" />
+                                        <div class="form-group">
                                             <label class="floating-label">Email</label>
+                                            <input ng-model="servicerequest.reporter.email" type="email" name="email" class="form-control" />
                                         </div>
                                     </div>
                                 </div>
@@ -91,15 +91,15 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="form-group form-material floating">
+                                <div class="form-group">
+                                    <label class="floating-label">Address</label>
                                     <textarea ng-model="servicerequest.address" ng-required msd-elastic name="address" class="form-control" rows="2">
                                   </textarea>
-                                    <label class="floating-label">Address</label>
                                 </div>
-                                <div class="form-group form-material floating">
+                                <div class="form-group">
+                                    <label class="floating-label">Description</label>
                                     <textarea ng-model="servicerequest.description" ng-required msd-elastic name="description" class="form-control" rows="3">
                                     </textarea>
-                                    <label class="floating-label">Description</label>
                                 </div>
                             </div>
                             <div class="p-a text-right">
