--- a/app/views/servicegroups/_partials/detail.html
+++ b/app/views/servicegroups/_partials/detail.html
@@ -14,34 +14,34 @@
                         <div class="box">
                             <div class="box-body">
                                 <div class="m-b" title="Service Group Name">
-                                    <div class="form-group form-material floating">
-                                        <input ng-disabled="!edit" ng-model="servicegroup.code" ng-required ng-minlength="1" type="text" name="code" class="form-control" />
+                                    <div class="form-group">
                                         <label title="Service Group Code" class="floating-label">Code</label>
+                                        <input ng-disabled="!edit" ng-model="servicegroup.code" ng-required ng-minlength="1" type="text" name="code" class="form-control" />
                                     </div>
                                 </div>
                                 <div class="m-t-lg" title="Service Group Name">
-                                    <div class="form-group form-material floating">
-                                        <input ng-disabled="!edit" ng-model="servicegroup.name" ng-required ng-minlength="2" type="text" name="name" class="form-control" />
+                                    <div class="form-group">
                                         <label title="Service Group Name" class="floating-label">Name</label>
+                                        <input ng-disabled="!edit" ng-model="servicegroup.name" ng-required ng-minlength="2" type="text" name="name" class="form-control" />
                                     </div>
                                 </div>
                                 <div class="m-t-lg" title="Service Group Weight">
-                                    <div class="form-group form-material floating">
+                                    <div class="form-group">
+                                        <label class="floating-label">Description</label>
                                         <textarea ng-disabled="!edit" ng-model="servicegroup.description" msd-elastic name="about" class="form-control" rows="3">
                                         </textarea>
-                                        <label class="floating-label">Description</label>
                                     </div>
                                 </div>
                                 <div class="m-t-lg" title="Service Group Color">
-                                  <color-picker ng-model="servicegroup.color">
-                                  </color-picker>
-                                  <div class="m-t-lg">
-                                      <div class="form-group form-material floating">
-                                          <input title="Service Group Color" ng-disabled="!edit" ng-model="servicegroup.color" ng-required ng-minlength="1" type="text" name="color" class="form-control" />
-                                          <label title="Service Group Color" class="floating-label">Service Group Color(HEX)</label>
-                                      </div>
-                                  </div>
-                              </div>
+                                    <color-picker ng-model="servicegroup.color">
+                                    </color-picker>
+                                    <div class="m-t-lg">
+                                        <div class="form-group">
+                                            <label title="Service Group Color" class="floating-label">Service Group Color(HEX)</label>
+                                            <input title="Service Group Color" ng-disabled="!edit" ng-model="servicegroup.color" ng-required ng-minlength="1" type="text" name="color" class="form-control" />
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </form>
