--- a/app/views/statuses/_partials/detail.html
+++ b/app/views/statuses/_partials/detail.html
@@ -14,24 +14,24 @@
                         <div class="box">
                             <div class="box-body">
                                 <div class="m-b" title="Status Name">
-                                    <div class="form-group form-material floating">
-                                        <input ng-disabled="!edit" ng-model="status.name" ng-required ng-minlength="2" type="text" name="name" class="form-control" />
+                                    <div class="form-group">
                                         <label title="Status Name" class="floating-label">Name</label>
+                                        <input ng-disabled="!edit" ng-model="status.name" ng-required ng-minlength="2" type="text" name="name" class="form-control" />
                                     </div>
                                 </div>
                                 <div class="m-t-lg" title="Status Weight">
-                                    <div class="form-group form-material floating">
-                                        <input ng-disabled="!edit" ng-model="status.weight" ng-required type="number" name="name" class="form-control" />
+                                    <div class="form-group">
                                         <label title="Status Weight" class="floating-label">Weight</label>
+                                        <input ng-disabled="!edit" ng-model="status.weight" ng-required type="number" name="name" class="form-control" />
                                     </div>
                                 </div>
                                 <div class="m-t-lg" title="Status Color">
                                     <color-picker ng-model="status.color">
                                     </color-picker>
                                     <div class="m-t-lg">
-                                        <div class="form-group form-material floating">
-                                            <input title="Status Color" ng-disabled="!edit" ng-model="status.color" ng-required ng-minlength="1" type="text" name="color" class="form-control" />
+                                        <div class="form-group">
                                             <label title="Status Color" class="floating-label">Status Color(HEX)</label>
+                                            <input title="Status Color" ng-disabled="!edit" ng-model="status.color" ng-required ng-minlength="1" type="text" name="color" class="form-control" />
                                         </div>
                                     </div>
                                 </div>
