--- a/app/views/parties/_partials/detail.html
+++ b/app/views/parties/_partials/detail.html
@@ -56,9 +56,9 @@
                                     <div class="col-sm-6" title="Party Password">
                                         <div class="form-group">
                                             <label title="Password" class="floating-label">Password</label>
-                                            <input ng-change="onPasswordChange()" ng-disabled="!edit" ng-model="party.password" ng-required ng-minlength="2" type="password" name="password" class="form-control" />
+                                            <input ng-change="onPasswordChange()" ng-disabled="!edit" ng-model="party.password" ng-required ng-minlength="2" type="password" name="password" class="form-control"  placeholder="****************" />
                                             <span ng-show="party.password && party.password.length < 8" class="help-block text-red-700 font-weight-400">Password length must be atleast 8 characters</span>
-                                            <span ng-show="!edit" class="help-block help-block-password font-size-20">****************</span>
+                                            <!-- <span ng-show="!edit" class="help-block help-block-password font-size-20">****************</span> -->
                                         </div>
                                     </div>
                                     <div ng-show="party.password && party.password.length >= 8" class="col-sm-6" title="Password Confirmation">
