Add modal footer buttons

--- a/app/views/servicerequests/_partials/customer_details.html
+++ b/app/views/servicerequests/_partials/customer_details.html
@@ -169,3 +169,10 @@
     </div>
 </div>
 <!-- end modal body -->
+
+<!-- start filter footer -->
+<div class="modal-footer">
+    <button class="btn btn-default" ng-click="$dismiss()">Cancel</button>
+    <button class="btn btn-primary" ng-click="">Ok</button>
+</div>
+<!-- end footer filter -->
